# fuzzing-code-sample

./: CMakeLists.txt  build.sh  mk_compile_commands.sh
src/object-input-functions/: object-input-functions.cpp  object-input-functions.h
src/pointer-based-functions/: pointer-based-functions.cpp  pointer-based-functions.h
src/primitive-argument-functions/: primitive-argument-function.cpp  primitive-argument-function.h
src/without-argument-function/: without-argument-function.cpp  without-argument-function.h
test/: CMakeLists.txt
test/pointer-based-function/: pbf_function_1.cpp  pbf_function_10.cpp  pbf_function_11.cpp  pbf_function_12.cpp  pbf_function_13.cpp  pbf_function_14.cpp  pbf_function_2.cpp  pbf_function_3.cpp  pbf_function_4.cpp  pbf_function_7.cpp  pbf_function_8.cpp  pbf_function_9.cpp
test/primitive-argument-function/: paf_function_1.cpp  paf_function_10.cpp  paf_function_11.cpp  paf_function_12.cpp  paf_function_13.cpp  paf_function_14.cpp  paf_function_5.cpp  paf_function_6.cpp
test/without-argument-function/: waf_function_1.cpp
